--- a/Project/ui/devices_menu.ui
+++ b/Project/ui/devices_menu.ui
@@ -76,26 +76,14 @@
       </item>
       <item alignment="Qt::AlignRight|Qt::AlignTop">
        <widget class="QPushButton" name="customCloseBtn">
-        <property name="minimumSize">
-         <size>
-          <width>28</width>
-          <height>28</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>28</width>
-          <height>28</height>
-         </size>
-        </property>
         <property name="toolTip">
          <string>Close</string>
         </property>
         <property name="text">
-         <string>×</string>
+         <string>x</string>
         </property>
         <property name="flat">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
