--- a/Project/ui/product_menu.ui
+++ b/Project/ui/product_menu.ui
@@ -180,17 +180,13 @@
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QComboBox" name="unitComboBox">
-           <item>
-            <property name="text">
-             <string>EACH</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>KG</string>
-            </property>
-           </item>
+          <widget class="QLineEdit" name="unitLineEdit">
+           <property name="text">
+            <string>EACH</string>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="6" column="0">
@@ -508,9 +504,12 @@
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QLabel" name="unitDisplayLabel">
+          <widget class="QLineEdit" name="unitLineEdit">
            <property name="text">
-            <string/>
+            <string>EACH</string>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -831,7 +830,14 @@
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QComboBox" name="unitComboBox"/>
+          <widget class="QLineEdit" name="unitLineEdit">
+           <property name="text">
+            <string>EACH</string>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
          <item row="6" column="0">
           <widget class="QLabel" name="supplierLabel">
