--- a/Project/ui/vegetable_menu.ui
+++ b/Project/ui/vegetable_menu.ui
@@ -515,7 +515,7 @@
         <number>10</number>
        </property>
        <item>
-        <widget class="QPushButton" name="pushButton_add">
+        <widget class="QPushButton" name="btnVegmenuOk">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -539,7 +539,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_remove">
+        <widget class="QPushButton" name="btnVegmenuDel">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -558,7 +558,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_cancel">
+        <widget class="QPushButton" name="btnVegmenuCancel">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
