--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -134,7 +134,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Yes, Logout</string>
+        <string>LOGOUT</string>
        </property>
       </widget>
      </item>
@@ -158,7 +158,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Cancel</string>
+        <string>CANCEL</string>
        </property>
        <property name="iconSize">
         <size>
